Added Sign-up feature

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" th:replace="~{base::parent(~{::#content},~{::title},~{::script})}">
+<html lang="en" th:replace="~{base::parent(~{::#content},~{::title},~{})}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>login Page</title>
 </head>
-
-<body>
-    <div id="content">
-        <h1>Welcome to home page</h1>
+<body> 
+    <section id="content">
+        <h1>Welcome to login page</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum eligendi magni dolores harum facere quod repellat aliquam laboriosam soluta dicta. Ad.</p>
-    </div>
+    </section>
     <script>
-        console.log("home page");
+        console.log("login page");
     </script>
 </body>
 </html>
