--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,8 +7,61 @@
 </head>
 <body> 
     <section id="content">
-        <h1>Welcome to login page</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum eligendi magni dolores harum facere quod repellat aliquam laboriosam soluta dicta. Ad.</p>
+        <div class="grid grid-cols-12 mt-4">
+            <div class="col-span-4 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>
+                <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
+                    <!--                        card-->
+                    <div  class="block p-6 border-t-[10px] border-green-700  bg-white rounded-xl shadow  dark:bg-gray-800 dark:border-blue-700">
+                        <!-- messgae here  -->
+                        <div data-th-replace="message::messagebox"></div> 
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Login</h5>
+                        <p class="font-normal text-gray-900 dark:text-gray-400">Start managing your contacts :)</p>
+
+                        <!-- for errors-handling and printing messages   -->
+                        <div th:if="${param.error}" class="text-red-700 text-center my-3">Invalid username and password</div>
+                        <div th:if="${param.logout}" class="text-green-700 text-center my-3">You have been logout</div>
+                        
+
+                        <form 
+                        data-th-action="@{'/authenticate'}"
+                        
+                        method="post"
+                        class="mt-5" 
+
+                        >
+
+<!--                            email-->
+                            <div class="mb-3">
+                                <label for="email"  class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">E-mail</label>
+                                <input name="email" type="email" id="email"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500" placeholder="name@Worldcup.com" required />
+                                <!-- <p 
+                                data:th:if="${#fields.hasErrors('email')}"
+                                data-th-errors="*{email}"
+                                class="text-red-600 px-1 py-2"></p> -->
+                            </div>
+<!--                            password-->
+                            <div class="mb-3">
+                                <label for="password" class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">Password</label>
+                                <input name = "password" type="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500" placeholder="" required />
+                                <!-- <p 
+                                data:th:if="${#fields.hasErrors('password')}"
+                                data-th-errors="*{password}"
+                                class="text-red-600 px-1 py-2"></p> -->
+                            </div>
+<!--                            
+                buttons-->
+                            <div class="mb-3 flex justify-center space-x-3">
+                                <button type = "submit" class="px-3 py-2 rounded bg-gray-700 hover:bg-gray-900 text-white dark:bg-blue-700 dark:hover:bg-blue-900 ">
+                                    Login
+                                </button>
+                                <button type = "reset" class="px-3 py-2 rounded bg-orange-700 hover:bg-orange-900 text-white dark:bg-orange-700 dark:hover:bg-orange-900 ">
+                                    Reset
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+        </div>
     </section>
     <script>
         console.log("login page");
