--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,34 +19,55 @@
                         <p class="font-normal text-gray-900 dark:text-gray-400">Start managing your contacts :)</p>
                         <form data-th-action="@{'/do-register'}" 
                         data-th-object="${userForm}" 
-                        method ="post" class="mt-5">
+                        method ="post" class="mt-5" novalidate>
 <!--                            name-->
                             <div class="mb-3">
                                 <label for="email;" class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">Name</label>
                                 <input type="text" id="name" 
                                 data-th-field="*{name}"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Enter Name" required />
+                                <!-- validate errors -->
+                                <p 
+                                data:th:if="${#fields.hasErrors('name')}"
+                                data-th-errors="*{name}"
+                                class="text-red-600 px-1 py-2"></p>
                             </div>
 
 <!--                            email-->
                             <div class="mb-3">
                                 <label for="email"  class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">E-mail</label>
                                 <input type="email" id="email"  data-th-field="*{email}"class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@Worldcup.com" required />
+                                <p 
+                                data:th:if="${#fields.hasErrors('email')}"
+                                data-th-errors="*{email}"
+                                class="text-red-600 px-1 py-2"></p>
                             </div>
 <!--                            password-->
                             <div class="mb-3">
                                 <label for="password" class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">Password</label>
                                 <input type="password" data-th-field="*{password}" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required />
+                                <p 
+                                data:th:if="${#fields.hasErrors('password')}"
+                                data-th-errors="*{password}"
+                                class="text-red-600 px-1 py-2"></p>
                             </div>
 <!--                            phone number-->
                             <div class="mb-3">
                                 <label for="phone" class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">Phone</label>
                                 <input type="text" id="phone" data-th-field="*{phoneNumber}"class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required />
+                                <p 
+                                data:th:if="${#fields.hasErrors('phoneNumber')}"
+                                data-th-errors="*{phoneNumber}"
+                                class="text-red-600 px-1 py-2"></p>
                             </div>
 <!--                            textarea-->
                             <div class="mb-3">
-                                <label for="about" class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">About</label>
+                                <label for="about" class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">Write something about yourself</label>
                                 <textarea data-th-field="*{about}"id="about" rows="2" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write your thoughts here..."></textarea>
+                                <p 
+                                data:th:if="${#fields.hasErrors('about')}"
+                                data-th-errors="*{about}"
+                                class="text-red-600 px-1 py-2"></p>
                             </div>
 <!--                            buttons-->
                             <div class="mb-3 flex justify-center space-x-3">
