--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -12,6 +12,7 @@ xmlns:th="http://www.thymeleaf.org">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet"/>
     <link rel="stylesheet" data-th-href="@{'./css/output.css'}"/>
     <link href="https://fonts.googleapis.com/css2?family=Forum&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" data-th-href="@{'./css/style.css'}"/>
     <style>
         body{
             font-family: "Lato", serif;
