--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -59,6 +59,9 @@
                                 </button>
                             </div>
                         </form>
+                        <div class="social-button-containers flex justify-center mt-5">
+                            <a class="px-3 py-2 login-with-google-btn" data-th-href="@{'/oauth2/authorization/google'}">Login with Google</a>
+                        </div>
                     </div>
                 </div>
         </div>
