--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -5,7 +5,7 @@
         <!-- brand -->
     <a data-th-href="@{'/home'}" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img data-th-src="@{'/images/call(1).png'}" class="h-8 shadow rounded-full" alt="call_icon"/>
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Contact Cloud</span>
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Connectly</span>
     </a>
     <!-- end of brand  -->
     <!-- login and signup  -->
