--- a/src/main/resources/templates/User/profile.html
+++ b/src/main/resources/templates/User/profile.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profile</title>
 </head>
 <body>
     <h1>User-Profile</h1>
+    <h2>Your Email : </h2>
+    <h2 data-th-text="${loggedInUser.username}" ></h2>
+    <h2>Your Name : </h2>
+    <h2 data-th-text="${loggedInUser.name}" ></h2>
+    
 </body>
 </html>
