--- a/src/main/resources/templates/User/dashboard.html
+++ b/src/main/resources/templates/User/dashboard.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:replace="~{base::parent(~{::#content},~{::title},~{::script})}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title data-th-text="${loggedInUser.name} + ' | DashBoard'"></title>
 </head>
+
 <body>
-    <h1>This is dashboard</h1>
-    <a data-th-href="@{'/logout'}">Logout</a>
+    <div id="content" class="flex">
+        <!-- sidebar for logged-in users -->
+        <div th:if="${loggedInUser}">
+            <div data-th-replace="~{user/sidebar::sidebar}"></div>
+        </div>
+
+        <!-- Main content section with padding-left applied only to the content -->
+        <div class="flex-1 pt-20" style="height: 1000px;" id="responsive">
+            <style>
+                @media (min-width: 640px) {
+                    #responsive {
+                        padding-left: 16rem;
+                         /* Equivalent to sm:pl-64 in Tailwind */
+                    }
+                }
+            </style>
+            <div class="flex justify-center flex-col items-center">
+                <h1 class="text-5xl">Welcome to Dashboard page</h1>
+                <p>g elit. A hic labor iossslmlsaj lsjdljljsla jijiodjojoijam sed commodi alias et quat ulladipis</p>
+            </div>
+        </div>
+    </div>
+    
+    <script>
+        console.log("this is a dashboard");
+    </script>
 </body>
 </html>
