--- a/src/main/resources/templates/User/profile.html
+++ b/src/main/resources/templates/User/profile.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:replace="~{base::parent(~{::#content},~{::title},~{::script})}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title data-th-text="${loggedInUser.name}+' | Connectly'"></title>
 </head>
+
 <body>
-    <h1>User-Profile</h1>
-    <h2>Your Email : </h2>
-    <h2 data-th-text="${loggedInUser.username}" ></h2>
-    <h2>Your Name : </h2>
-    <h2 data-th-text="${loggedInUser.name}" ></h2>
+    <div id="content">
+        <!-- sidebar for logged-in users -->
+        <div th:if="${loggedInUser}">
+            <div data-th-replace="~{user/sidebar::sidebar}"></div>
+    </div>
+        <div style=" height: 1000px;">
+            <div style="padding-top: 5rem; height: 1000px;" id="responsiveDiv">
+                <style>
+                    @media (min-width: 640px) {
+                        #responsiveDiv {
+                            padding-left: 16rem; /* Equivalent to sm:pl-64 in Tailwind */
+                        }
+                    }
+                </style>
+                 <div class="flex justify-center flex-col items-center">
+                    <h1 class="text-5xl">Welcome to Profile page</h1>
+                    <p>g elit. A hic labor iossslmlsaj lsjdljljsla jijiodjojoijam sed commodi alias et quat ulladipis</p>
+                </div>
+            </div>
+            
+           
+            
+        </div>
+    <!-- </div> -->
     
+    <script>
+        console.log("this is a profile");
+    </script>
 </body>
 </html>
