--- a/src/main/resources/templates/User/user_navbar.html
+++ b/src/main/resources/templates/User/user_navbar.html
@@ -1,10 +1,42 @@
 <nav
-  data-th-fragment="navbar"
-  class="bg-white border-gray-200 shadow-sm border-gray-900 dark:bg-gray-900"
+  id="navbar"
+  th:fragment="user-navbar"
+  class="bg-white border-gray-900 shadow-sm dark:bg-gray-900 fixed w-full top-0 left-0 rigth-0 pl-64 z-1"
 >
+  <style>
+    @media (min-width: 640px) {
+      #navbar {
+        padding-left: 16rem;
+      }
+    }
+  </style>
+
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
+    <button
+      data-drawer-target="logo-sidebar"
+      data-drawer-toggle="logo-sidebar"
+      aria-controls="logo-sidebar"
+      type="button"
+      class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+    >
+      <span class="sr-only">Open sidebar</span>
+      <svg
+        class="w-6 h-6"
+        aria-hidden="true"
+        fill="currentColor"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          clip-rule="evenodd"
+          fill-rule="evenodd"
+          d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"
+        ></path>
+      </svg>
+    </button>
+
     <!-- brand -->
     <a
       data-th-href="@{'/home'}"
@@ -15,7 +47,6 @@
         class="h-8 shadow rounded-full"
         alt="call_icon"
       />
-      <!-- <i class="fa-brands fa-instagram h-10 w-10"></i> -->
       <span
         class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
         >Connectly</span
@@ -35,16 +66,17 @@
         <span>Light</span>
       </button>
       <a
-        data-th-href="@{'/login'}"
+        data-th-href="@{'/user/profile'}"
         type="button"
         class="text-white bg-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        >Login
+      >
+        <span data-th-text="${loggedInUser.name}"></span>
       </a>
       <a
-        data-th-href="@{'/register'}"
+        data-th-href="@{'/logout'}"
         type="button"
-        class="text-white bg-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        >Sign up
+        class="text-white bg-red-800 hover:bg-red-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        >Logout
       </a>
       <button
         data-collapse-toggle="navbar-cta"
@@ -77,8 +109,7 @@
       id="navbar-cta"
     >
       <ul
-        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
-        style="font-weight: bold"
+        class="flex flex-col font-bold p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
       >
         <li>
           <a
