--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,49 +1,68 @@
 <!DOCTYPE html>
-<html 
-class="light"
-lang="en"
-th:fragment="parent(content,title,script)"
-xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html
+  class="light"
+  lang="en"
+  th:fragment="parent(content,title,script)"
+  xmlns:th="http://www.thymeleaf.org"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title th:replace="${title}">SCM</title>
-    
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" data-th-href="@{'./css/output.css'}"/>
-    <link href="https://fonts.googleapis.com/css2?family=Forum&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" data-th-href="@{'./css/style.css'}"/>
-    
+
+    <link rel="stylesheet" data-th-href="@{'./css/style.css'}" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Forum&family=Geist:wght@100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" data-th-href="@{'./css/output.css'}" />
+
     <style>
-        body{
-            font-family: "Lato", serif;
-            font-weight: 400;
-            font-style: normal;
-
-        }
+      html {
+        scroll-padding-top: 50px;
+      }
+      body {
+        font-family: "Geist", serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+      }
     </style>
-</head>
-<body class="dark:bg-gray-900 dark:text-white">
+  </head>
+  <body class="dark:bg-gray-900 dark:text-white">
     <!-- Base Page Content -->
-    <!-- common header  -->
-    <div data-th-replace="navbar::navbar">
 
+    <!-- navbar for logged in users  -->
+    <div th:if="${loggedInUser}">
+      <div data-th-replace="user/user_navbar::user-navbar"></div>
     </div>
+
+    <!-- navbar for non-logged  -->
+    <div th:unless="${loggedInUser}">
+      <div data-th-replace="navbar::navbar"></div>
+    </div>
+
+    <!-- <div data-th-replace="~{navbar::navbar}"> -->
 
     <!-- main-content  -->
     <div class="p-4">
-        <section data-th-replace="${content}">
-
-        </section>
+      <section data-th-replace="${content}"></section>
     </div>
-    
+
     <!-- common footer  -->
-<!--    <footer class="p-4">-->
-<!--        Contact Manager by Akshit-->
-<!--    </footer>-->
+    <!--    <footer class="p-4">-->
+    <!--        Contact Manager by Akshit-->
+    <!--    </footer>-->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
     <script data-th-src="@{'/js/script.js'}"></script>
     <th:block data-th-replace="${script}"></th:block>
-</body>
+  </body>
 </html>
