--- a/src/main/resources/templates/User/contacts.html
+++ b/src/main/resources/templates/User/contacts.html
@@ -30,8 +30,9 @@
           <h1 class="text-center text-5xl">All Contacts</h1>
           <p class="text-center">List of contacts</p>
 
-          <div class="contact_container p-5">
+          <div class="contact_container p-5 -z-50">
             <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+              <div data-th-replace="message::messagebox"></div>
               <form
                 data-th-object="${contactSearchForm}"
                 data-th-action="@{'/user/contacts/search'}"
@@ -155,9 +156,18 @@
                     </td>
                     <td class="px-6 py-4">
                       <div>
-                        <a href=""><i class="fa-solid fa-eye h-6 w-6"></i> </a>
+                        <!-- View button -->
+                        <button th:onclick="loadContactData([[${c.id}]])">
+                          <i class="fa-solid fa-eye h-6 w-6"></i>
+                        </button>
+
+                        <!-- Edit button (You might want to link to an edit page or trigger an edit action) -->
                         <a href=""><i class="fa-solid fa-pen h-6 w-6"></i></a>
-                        <a href=""><i class="fa-solid fa-trash h-6 w-6"></i></a>
+
+                        <!-- Delete button -->
+                        <button th:onclick="deleteContact([[${c.id}]])">
+                          <i class="fa-solid fa-trash h-6 w-6"></i>
+                        </button>
                       </div>
                     </td>
                   </tr>
@@ -204,7 +214,7 @@
                 </nav>
               </div>
               <h1
-                class="text-3xl text-center bg-white p-4 dark:bg-gray-800"
+                class="text-3xl text-gray-800 text-center bg-white p-4 dark:bg-gray-800 dark:text-white"
                 data-th-if="${pageContact.totalElements<=0}"
               >
                 No Contacts Found
@@ -212,9 +222,10 @@
             </div>
           </div>
         </div>
+        <div data-th-replace="~{user/contact_modals::contact}"></div>
       </div>
     </div>
-
+    <script data-th-src="@{'/js/contacts.js'}"></script>
     <script>
       console.log("this is a dashboard");
     </script>
